--- a/css/styles.css
+++ b/css/styles.css
@@ -65,6 +65,8 @@ img {
 /* ==================== HEADER STYLES ======================= */
 .page-header {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
@@ -110,7 +112,23 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.menu-link.current {
+  position: relative;
+}
+.menu-link.current::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: #404bbf;
+}
+
 .contacts {
   font-style: normal;
   margin-left: auto;
@@ -128,22 +146,33 @@ img {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .menu-link:hover,
 .menu-link:focus,
 .contacts-link:hover,
-.contacts-link:focus {
+.contacts-link:focus,
+.menu-link.current {
   color: #404bbf;
 }
 
 /* ==================== SECTION-1 STYLES======================= */
 .title-section {
-  min-width: 1440px;
+  max-width: 1440px;
   margin-left: auto;
   margin-right: auto;
   padding: 188px 0;
-  background: #2e2f42;
+  background-color: #2e2f42;
+  background-image: linear-gradient(
+      to bottom,
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(/images/background-image-header.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .title {
@@ -173,6 +202,8 @@ img {
   color: #fff;
   border: none;
   border-radius: 4px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn:hover,
@@ -195,6 +226,18 @@ img {
 
 .benefits-item {
   width: calc((100% - 3 * 24px) / 4);
+}
+
+.benefits-icon-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  width: 264px;
+  height: 112px;
+  background: #f4f4fd;
+  margin-bottom: 8px;
 }
 
 .benefist-subtitle {
@@ -232,6 +275,8 @@ img {
   width: calc((100% - 3 * 24px) / 4);
   background-color: #fff;
   border-radius: 0 0 4px 4px;
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .team-list {
@@ -259,6 +304,40 @@ img {
   padding: 32px 0;
 }
 
+.user-social-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  margin-top: 8px;
+  padding-left: 16px;
+  padding-right: 16px;
+}
+
+.user-social-item {
+  width: 40px;
+  height: 40px;
+}
+
+.user-social-link {
+  display: flex;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.user-social-link:hover,
+.user-social-link:focus {
+  background-color: #404bbf;
+}
+
+.user-icon {
+  fill: #f4f4fd;
+}
 /* ==================== SECTION-4 STYLES======================= */
 .page-portfolio {
   padding-top: 120px;
@@ -280,6 +359,33 @@ img {
   flex-wrap: wrap;
   row-gap: 48px;
   column-gap: 24px;
+}
+
+.pic-div {
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay {
+  background-color: #4d5ae5;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  padding-top: 40px;
+  padding-right: 32px;
+  padding-left: 32px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-item:hover .overlay,
+.portfolio-item:focus .overlay {
+  transform: translateY(0);
 }
 
 .portfolio-container {
@@ -307,6 +413,11 @@ img {
 .page-footer {
   padding: 100px 0;
   background-color: #2e2f42;
+}
+
+.footer-container {
+  display: flex;
+  gap: 120px;
 }
 
 .footer-logo .color-logo {
