--- a/css/styles.css
+++ b/css/styles.css
@@ -203,7 +203,7 @@ img {
   border: none;
   border-radius: 4px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn:hover,
@@ -381,9 +381,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
-  padding-top: 40px;
-  padding-right: 32px;
-  padding-left: 32px;
+  padding: 40px 32px;
   position: absolute;
   top: 0;
   left: 0;
@@ -393,8 +391,7 @@ img {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-item:hover .overlay,
-.portfolio-item:focus .overlay {
+.portfolio-item:hover .overlay {
   transform: translateY(0);
 }
 
@@ -428,6 +425,11 @@ img {
 .footer-container {
   display: flex;
   gap: 120px;
+  align-items: baseline;
+}
+
+.logo-footer-container {
+  margin-right: 120px;
 }
 
 .footer-logo .color-logo {
@@ -444,6 +446,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
+  margin-bottom: 16px;
 }
 
 .text-icon {
@@ -456,7 +459,7 @@ img {
 
 .footer-social-list {
   display: flex;
-  gap: 24px;
+  gap: 16px;
 }
 
 .footer-social-item {
